--- a/aed_final_project/src/ui/supplier/supplier_head.form
+++ b/aed_final_project/src/ui/supplier/supplier_head.form
@@ -323,7 +323,7 @@
                                       <Component id="brandnameTxt" min="-2" pref="166" max="-2" attributes="0"/>
                                       <Component id="companynameTxt" min="-2" pref="166" max="-2" attributes="0"/>
                                   </Group>
-                                  <Component id="jComboBox2" alignment="1" min="-2" pref="166" max="-2" attributes="0"/>
+                                  <Component id="reqPhoneTxt" alignment="1" min="-2" pref="166" max="-2" attributes="0"/>
                               </Group>
                               <EmptySpace pref="146" max="32767" attributes="0"/>
                               <Component id="viewwBtn" min="-2" max="-2" attributes="0"/>
@@ -364,7 +364,7 @@
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="jLabel12" alignment="3" min="-2" pref="26" max="-2" attributes="0"/>
-                          <Component id="jComboBox2" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="reqPhoneTxt" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Component id="submitBtn" min="-2" max="-2" attributes="0"/>
@@ -466,7 +466,7 @@
             </Component>
             <Component class="javax.swing.JTextField" name="phonenameTxt">
             </Component>
-            <Component class="javax.swing.JComboBox" name="jComboBox2">
+            <Component class="javax.swing.JComboBox" name="reqPhoneTxt">
               <Properties>
                 <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
                   <StringArray count="2">
@@ -521,26 +521,21 @@
                           <EmptySpace max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
                               <Group type="102" attributes="0">
-                                  <EmptySpace min="6" pref="6" max="-2" attributes="0"/>
+                                  <EmptySpace min="-2" pref="6" max="-2" attributes="0"/>
+                                  <Group type="103" groupAlignment="1" attributes="0">
+                                      <Group type="103" groupAlignment="0" attributes="0">
+                                          <Component id="jLabel8" alignment="0" min="-2" pref="145" max="-2" attributes="0"/>
+                                          <Component id="jLabel5" alignment="0" min="-2" pref="145" max="-2" attributes="0"/>
+                                          <Component id="jLabel6" alignment="1" min="-2" pref="145" max="-2" attributes="0"/>
+                                      </Group>
+                                      <Component id="jLabel7" min="-2" pref="145" max="-2" attributes="0"/>
+                                  </Group>
+                                  <EmptySpace max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                                      <Group type="102" alignment="1" attributes="0">
-                                          <Component id="jLabel7" min="-2" pref="145" max="-2" attributes="0"/>
-                                          <EmptySpace max="32767" attributes="0"/>
-                                      </Group>
-                                      <Group type="102" alignment="0" attributes="0">
-                                          <Group type="103" groupAlignment="0" attributes="0">
-                                              <Component id="jLabel8" alignment="0" min="-2" pref="145" max="-2" attributes="0"/>
-                                              <Component id="jLabel5" alignment="0" min="-2" pref="145" max="-2" attributes="0"/>
-                                              <Component id="jLabel6" alignment="1" min="-2" pref="145" max="-2" attributes="0"/>
-                                          </Group>
-                                          <EmptySpace max="-2" attributes="0"/>
-                                          <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                                              <Component id="emailTxt" max="32767" attributes="0"/>
-                                              <Component id="phoneTxt" alignment="0" max="32767" attributes="0"/>
-                                              <Component id="cnameTxt" alignment="0" max="32767" attributes="0"/>
-                                              <Component id="cidTxt" alignment="0" min="-2" pref="292" max="-2" attributes="0"/>
-                                          </Group>
-                                      </Group>
+                                      <Component id="emailTxt" max="32767" attributes="0"/>
+                                      <Component id="phoneTxt" alignment="0" max="32767" attributes="0"/>
+                                      <Component id="cnameTxt" alignment="0" max="32767" attributes="0"/>
+                                      <Component id="cidTxt" alignment="0" min="-2" pref="292" max="-2" attributes="0"/>
                                   </Group>
                                   <EmptySpace min="-2" pref="55" max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="1" attributes="0">
